feat(souq): Add rules-config service with tenant overrides
- Add SouqRuleConfig interface with 5 rule properties
- Add Config.souq.rules constants with env var support
- Add setSouqRuleOverride/getSouqRuleConfig for tenant customization
- Update investigation-service and returns-service to use centralized rules
- Add comprehensive unit tests for rules-config
- Add aws-config and banned-literals tests
- Update DEPLOYMENT_CHECKLIST with latest status

--- a/.env.example
+++ b/.env.example
@@ -453,8 +453,8 @@ ZATCA_TIMEOUT_MS=10000
 # =============================================================================
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
-AWS_REGION=me-south-1
-AWS_S3_BUCKET=fixzit-uploads
+AWS_REGION=me-south-1 # Required in all environments (no fallback)
+AWS_S3_BUCKET=fixzit-uploads # Required in all environments (no fallback)
 AWS_SES_FROM_EMAIL=noreply@yourdomain.com
 
 # =============================================================================
