docs: update configs, instructions, and deployment documentation
- .env.example/.env.test.example: updated environment examples
- .github/copilot-instructions.md: refined Copilot instructions
- .vscode/settings.json: updated VS Code settings
- AGENTS.md: agent working agreement updates
- docs/PENDING_MASTER.md: minor update
- docs/analysis/COMPREHENSIVE_DEPLOYMENT_AUDIT.md: deployment audit
- docs/fixes/DEPLOYMENT_FIX_STEP_BY_STEP.md: deployment fix steps

--- a/.env.example
+++ b/.env.example
@@ -193,6 +193,18 @@ S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=fixzit-marketplace
 S3_REGION=us-east-1
 
+# === AV SCAN + STATUS TOKENS ===
+# Optional: enable AV scanning for uploads (requires AV_SCAN_ENDPOINT service)
+AV_SCAN_ENABLED=false
+AV_SCAN_ENDPOINT=
+# Per-tenant scan-status tokens (JSON map) for token-based polling without session cookies
+# Example: {"tenant-1":"local-scan-token","tenant-2":"another-token"}
+SCAN_STATUS_TOKENS_BY_ORG={"tenant-1":"local-scan-token"}
+# Alternative single-token form: set org id + token together
+SCAN_STATUS_TOKEN_ORG=tenant-1
+SCAN_STATUS_TOKEN=
+SCAN_STATUS_TOKEN_REQUIRED=false
+
 # Local MinIO credentials (docker-compose.souq.yml)
 MINIO_ROOT_USER=fixzit-minio
 MINIO_ROOT_PASSWORD=
