--- a/.env.test.example
+++ b/.env.test.example
@@ -37,6 +37,17 @@ GOOGLE_CLIENT_ID=your-test-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-test-client-secret
 
 # =============================================================================
+# AV SCAN STATUS TOKENS (PER-ORG) FOR TESTS
+# =============================================================================
+# Optional: set when testing token-based scan-status polling (without session cookies)
+# Example map: {"tenant-1":"test-scan-token"}
+SCAN_STATUS_TOKENS_BY_ORG={"tenant-1":"test-scan-token"}
+# Alternatively set single org+token pair:
+SCAN_STATUS_TOKEN_ORG=tenant-1
+SCAN_STATUS_TOKEN=
+SCAN_STATUS_TOKEN_REQUIRED=false
+
+# =============================================================================
 # NOTES:
 # - These accounts must exist in your test database with these phone numbers
 # - Phone numbers must be in E.164 format (+966XXXXXXXXX)
