fix(P1/P2): v65.4 production readiness fixes
WORKFLOW YAML WARNINGS (3 files):
- agent-governor.yml: Add STORE_PATH and NEXTAUTH_URL fallbacks
- pr_agent.yml: Add OPENAI_KEY guard for optional secret
- renovate.yml: Simplify RENOVATE_TOKEN fallback syntax

RTL COMPLIANCE (31 files):
- Fix mr-2 → me-2 in all error.tsx files for RTL support
- Uses logical direction classes per STRICT v4 requirements

NOTIFICATION LOGGING (1 file):
- channel-handlers.ts: Add debug logging to 5 catch blocks
- Non-blocking logging for notification failures

HR MODULE RBAC (7 files):
- Standardize all HR routes to use hasAllowedRole() helper
- Support TEAM_MEMBER + subRole pattern (HR_OFFICER, FINANCE_OFFICER)
- Routes: attendance, leave-types, leaves, payroll/runs, calculate, wps

ROLE-GUARDS IMPROVEMENT (1 file):
- hasAllowedRole() now checks BOTH raw role AND FM-normalized role
- Fixes legacy role checking (HR, FINANCE map to TEAM_MEMBER internally)

ORGID FALLBACK DOCUMENTATION (3 files):
- sms-sla-monitor.ts: Document 'global' bucket for system messages
- ats/rbac.ts: Document platform default for public job listings
- marketplace/context.ts: Document validation-only empty string

QA GATE:
- Tests: 3221 passing (324 files)
- TypeScript: 0 errors
- Tenancy: All HR routes enforce org_id scope
- Branding/RTL: All error.tsx use me-2 (logical direction)

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -46,7 +46,8 @@ jobs:
       - name: Setup pnpm cache
         uses: actions/cache@v4
         with:
-          path: ${{ env.STORE_PATH }}
+          # Note: STORE_PATH is set in the previous step via GITHUB_ENV
+          path: ${{ env.STORE_PATH || '~/.local/share/pnpm/store' }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
@@ -97,7 +98,8 @@ jobs:
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
+          # Note: NEXTAUTH_URL is optional, defaults to localhost for CI builds
+          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
           NEXT_PUBLIC_APP_URL: http://localhost:3000
           DISABLE_MONGODB_FOR_BUILD: "true"
           SKIP_ENV_VALIDATION: "true"
