--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev:clean": "bash scripts/cleanup-dev-cache.sh && cross-env NODE_OPTIONS=--max-old-space-size=8192 next dev --turbo",
     "build": "bash scripts/prebuild-cache-clean.sh && cross-env NODE_OPTIONS=--max-old-space-size=8192 next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 50 --ignore-pattern '.next/**' --ignore-pattern 'public/**' --ignore-pattern '_artifacts/**' --ignore-pattern 'deployment/**' --ignore-pattern 'playwright-report/**' --ignore-pattern 'e2e-test-results/**' --ignore-pattern 'qa/**' --ignore-pattern 'scripts/**' --ignore-pattern 'tools/**' --ignore-pattern 'tests/playwright-report/**'",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 50 --ignore-pattern '.next/**' --ignore-pattern 'public/**' --ignore-pattern '_artifacts/**' --ignore-pattern 'deployment/**' --ignore-pattern 'playwright-report/**' --ignore-pattern 'e2e-test-results/**' --ignore-pattern 'qa/**' --ignore-pattern 'scripts/**' --ignore-pattern 'tools/**' --ignore-pattern 'tests/playwright-report/**' --ignore-pattern 'issue-tracker/**'",
     "lint:prod": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --max-warnings 0 --report-unused-disable-directives",
     "lint:prod:fix": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --fix",
     "lint:e2e-env": "node scripts/check-e2e-env.js",
@@ -96,6 +96,7 @@
     "scan:i18n:v2": "node scripts/i18n-scan-v2.mjs",
     "scan:i18n:audit": "node scripts/audit-translations.mjs",
     "scan:api": "node scripts/api-scan-v2.mjs",
+    "issue-log": "tsx scripts/issue-log.ts",
     "i18n:build": "tsx scripts/generate-dictionaries-json.ts",
     "i18n:audit": "tsx scripts/find-missing-locales.ts",
     "i18n:audit:verbose": "tsx scripts/find-missing-locales.ts --show-samples",
