--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -18,15 +18,14 @@ permissions:
 jobs:
   renovate:
     runs-on: ubuntu-latest
+    env:
+      LOG_LEVEL: info
+      RENOVATE_REPOSITORY: ${{ github.repository }}
+      # Prefer RENOVATE_TOKEN secret, else fall back to GitHub token
+      RENOVATE_TOKEN: ${{ secrets['RENOVATE_TOKEN'] || github.token }}
     steps:
       - name: Run Renovate
         uses: renovatebot/github-action@v44.0.5
         with:
           configurationFile: renovate.json
-          # Note: Falls back to github.token if RENOVATE_TOKEN not configured
-          token: ${{ secrets.RENOVATE_TOKEN || github.token }}
-        env:
-          LOG_LEVEL: info
-          RENOVATE_REPOSITORY: ${{ github.repository }}
-          # Note: Falls back to github.token if RENOVATE_TOKEN not configured
-          RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN || github.token }}
+          token: ${{ env.RENOVATE_TOKEN }}
