fix(workflows,tests): Fix YAML syntax and TypeScript errors
- actionlint.yml: Replace deprecated filter_mode with fail_level
- build-sourcemaps.yml: Fix secrets context (use env instead)
- listings-search.route.test.ts: Change POST to GET (route only exports GET)
- support-chatbot.route.test.ts: Fix mock type (mockResolvedValue vs mockReturnValue)
- constants.ts: Prefix unused helper with _ to satisfy linter

All TypeScript errors resolved, tests passing.

--- a/.github/workflows/build-sourcemaps.yml
+++ b/.github/workflows/build-sourcemaps.yml
@@ -51,7 +51,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Ensure Mongo Indexes (idempotent)
-        if: ${{ secrets.MONGODB_URI != '' }}
+        if: env.MONGODB_URI != ''
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
         run: pnpm tsx -e "import { createIndexes } from './lib/db/collections'; import { getDatabase } from './lib/mongodb-unified'; (async () => { await createIndexes(); try { const db = await getDatabase(); (db as any)?.client?.close?.(); } catch (_) {} })();"
