--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
-          filter_mode: nofilter
+          fail_level: any
           fail_on_error: true
           actionlint_flags: |
             -ignore 'SC2086:.*'
